// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminAnalytics /> should render correctly - index 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="skeleton__outer skeleton__section"
    >
      <div
        class="skeleton__shimmer"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="skeleton__outer skeleton__card--compact"
    >
      <div
        class="skeleton__shimmer"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with admin user 1`] = `
<div>
  <div>
    <a
      class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-analytics"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with analytics 1`] = `
<div>
  <div>
    <a
      class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-analytics"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with initial state 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="skeleton__outer skeleton__section"
    >
      <div
        class="skeleton__shimmer"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="skeleton__outer skeleton__card--compact"
    >
      <div
        class="skeleton__shimmer"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loadError 1`] = `
<div>
  <div>
    <a
      class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-analytics"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Show filters
      </span>
    </button>
  </div>
  <span
    class="paragraph"
  >
    <span
      class="error"
    >
      Could not load analytics
    </span>
  </span>
  <br />
  <span
    class="paragraph"
  >
    <span
      class="error"
    >
      Something went wrong
    </span>
  </span>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <a
      class="text-link text-link--text-link text-link--no-padding text-link--inline page-title__link"
      href="/admin"
    >
      ⇠ Admin
    </a>
    <div
      class="typography__main"
    >
      <h1
        class="typography__text typography__text--section page-title__section page-title__section--with-link"
        id="admin-analytics"
      >
        Admin analytics
      </h1>
    </div>
  </div>
  <div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--disabled button__outer--large admin-analytics__control"
      disabled=""
      type="button"
    >
      <span
        class="button__child"
      >
        Reload analytics
      </span>
    </button>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy button__outer--large admin-analytics__control"
      type="button"
    >
      <span
        class="button__child"
      >
        Show filters
      </span>
    </button>
  </div>
  <div
    class="admin-analytics__card-container"
  />
</div>
`;

exports[`<AdminAnalytics /> should render correctly with user 1`] = `
<div>
  <div
    class="typography__main"
  >
    <h1
      class="typography__text typography__text--section"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="paragraph"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="text-link text-link--text-link text-link--no-padding text-link--inline"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
